--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,10 @@
 // Navigation code here
 nav{
     .flexcenterwrap();
+    position: fixed;
+    width: 100%;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.816);
     //mixin 1
     margin-bottom: 1%;
     h1{
@@ -12,6 +16,7 @@ nav{
     ul{
         display: flex;
         width: 22%;
+        margin-bottom: 1%;
         justify-content: space-between;
         @media @phone{
             width: 80%;
